@@ -1,3 +1,4 @@
+* Add test on domain of relation fields
 * Add stored path as alternative to MPTT
 * Activate and upgrade modules from configuration wizard
 * Add set_from_header in email tools
